<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.layout.SearchCategoriesFragment">
    <TextView
        android:id="@+id/searchFrag_genresTxt"
        style="@style/main_text_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/fragSearch_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_are_no_result"
        style="@style/err_msg_style"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchFrag_resultTxt" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchFrag_Rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_constraintTop_toBottomOf="@+id/searchFrag_genresTxt"
        android:layout_marginTop="@dimen/_8sdp"
        />

    <TextView
        android:id="@+id/searchFrag_resultTxt"
        style="@style/main_text_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchFrag_Rv"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layoutAnimation="@anim/layout_animation"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchFrag_resultTxt"
         />
    <ProgressBar
        android:id="@+id/search_category_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchFrag_resultTxt" />
    <TextView
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/refresh"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_category_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>